fixed footer/contact spacing

--- a/src/styling/About.css
+++ b/src/styling/About.css
@@ -1,5 +1,5 @@
 #about {
-  /* border: solid 1px yellow; */
+  border: solid 1px yellow;
   padding-top: 4em;
   color: #8992b0;
   font-size: 1.2em;
