--- a/src/styling/Projects.css
+++ b/src/styling/Projects.css
@@ -1,5 +1,5 @@
 #projects {
-  /* border: 1px solid yellow; */
+  border: 1px solid yellow;
   padding-top: 4em;
   margin-left: 15%;
   margin-right: 15%;
